@@ -1,5 +1,8 @@
 2008-11-02  Gabor Csardi  <csardi@szaffi>
 
+	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
+	support for vertex names
+
 	* interfaces/R/igraph/R/conversion.R (get.incidence) : updated,
 	sparse matrix support was added
 
